[package]
name = "android_trace_parser"
version = "0.1.0"
authors = ["Ivan Pavlyuk <ivanpavluk00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nom = "6"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

